ui: fix broken layout on iOS

--- a/public/basic.css
+++ b/public/basic.css
@@ -1,3 +1,8 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
 body {
     font-family: 'Noto Sans JP', sans-serif;
     background-color: #f5f5f5;
@@ -15,18 +20,18 @@ header{
 
 main {
     background-color: #ffffff;
-    padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 80%;
     max-width: 640px;
-    min-width: 300px;
+    min-width: 280px;
     justify-self: center;
 
     display: grid;
     align-content: center;
-    justify-content: center stretch;
-    gap: 1rem;
+    justify-content: center;
+    gap: 0.5rem;
+    grid-template-columns: minmax(240px, 0.8fr);
 }
 
 footer{
